# paper-reading

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  database.py  logger.py  main.py  models.py  schemas.py
backend/app/routers/: papers.py
backend/app/services/: agent_service.py  arxiv_service.py  latex_parser.py  llm_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: PaperList.tsx  PaperViewer.tsx  SubmitForm.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: HomePage.tsx  PaperPage.tsx
